chore: update gitignore to properly exclude node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,9 @@ htmlcov/
 Thumbs.db
 
 # dependencies
-/node_modules
+node_modules/
+**/node_modules/
+sd-motion-generator/node_modules/
 /.pnp
 .pnp.js
 
