--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,4 +7,5 @@ pytest-asyncio==0.22.0
 httpx==0.25.1
 pytest-timeout==2.1.0
 pytest-mock==3.14.0
-requests-mock==1.11.0   
+requests-mock==1.11.0
+beautifulsoup4==4.12.3   
