--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,5 @@ httpx==0.25.1
 pytest-timeout==2.1.0
 pytest-mock==3.14.0
 requests-mock==1.11.0
-beautifulsoup4==4.12.3   
+beautifulsoup4==4.12.3
+PyPDF2==3.0.1   
